# LMS_proj_news

./: .env.dev  .gitignore  Dockerfile  Makefile  README.md  black.toml  docker-compose.yml  pyproject.toml  requirements.txt
src/news/item/: admin.py  forms.py  models.py  urls.py  views.py
src/news/item/migrations/: 0001_initial.py  0002_alter_tags_name.py  0003_alter_tags_name.py  0004_alter_tags_name.py  0005_item_title_comment.py  0006_alter_comment_author_alter_comment_item_and_more.py  0007_alter_comment_options_alter_item_options.py  0008_item_likes.py  0009_remove_comment_replied_on_remove_item_likes_likes.py  0010_item_like_delete_likes.py  0011_feedback.py  0012_delete_feedback.py  0013_feedback.py  0014_alter_feedback_options_feedback_email.py  0015_alter_feedback_text.py  0016_remove_feedback_text_feedback_text_feedback.py  0017_alter_item_options_remove_feedback_email_and_more.py  0018_alter_addition_options_alter_item_options_and_more.py  0019_alter_item_created_at_alter_item_updated_at.py  0020_alter_item_created_at_alter_item_updated_at.py  0021_alter_item_created_at_alter_item_updated_at.py  0022_alter_item_created_at_alter_item_updated_at.py  0023_alter_item_created_at_alter_item_updated_at.py  (+3 more)
src/news/message/: admin.py  forms.py  models.py  urls.py  views.py
src/news/news/: settings.py  urls.py
src/news/news_feed/: urls.py  views.py
src/news/registration/: forms.py  urls.py  views.py
src/news/reset_password/: forms.py  urls.py  views.py
src/news/user_page/: admin.py  forms.py  models.py  urls.py  views.py
(+38 files in other folders)
