[tool.poetry]
name = "lms-proj-news"
version = "0.1.0"
description = ""
authors = ["sasha <sgefsnkiospch908@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
black = "^24.4.2"
isort = "^5.13.2"
django-cleanup = "^8.1.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"